--- a/src/search/search.html
+++ b/src/search/search.html
@@ -3,6 +3,15 @@
 <!-- <npdc:search feed="feed"></npdc:search>  -->
 
 
+  <!-- <npdc:search feed="feed"></npdc:search>  -->
+<div class="np-primary-control">
+<md-button  class="md-fab" ng-if="security.isAuthorized('create', resource.path)" ng-href="{{ resource.newHref() }}">
+  <md-tooltip md-direction="top">New</md-tooltip>
+  <md-icon>add</md-icon>
+</md-button>
+</div>
+
+
 <div class="npdc-search">
   <md-content>
 
