Norw translation show

--- a/src/show/show-geology-sample.html
+++ b/src/show/show-geology-sample.html
@@ -4,55 +4,44 @@
 <leaflet ng-if="document && mapOptions.coverage" options="mapOptions" class="coverage-map"></leaflet>
 <div class="np-padding">
   <div ng-if="document" class="np-doc">
-
-
     <h1>
           <a ng-repeat="file in document.files" ng-href="{{file.uri}}"><img src="{{file.uri}}" alt="{{ file.filename }}" style="width:152px;height:114px;"></a>
   <span class="md-display-2">{{ document.lithology }} </span><span style={font-size:15%}>
 [{{document.title}}]</span></h1>
 
-  <section>
-     <p ng-if="document['@placename'] || document['latitude']" >
-     <md-icon>place</md-icon>{{document['@placename']}} &nbsp; [{{document.latitude}}, {{document.longitude}}]</p>
-    <p ng-if="document.position_accuracy">
-          Position accuracy: {{document.position_accuracy}}</p>
-    <p ng-if="document.original_sample_name">
-          Field sample name: {{document.original_sample_name}}</p>
+<section>
+   <md-list>
+    <p ng-if="document.original_sample_name">{{ 'Original sample marking' | t }}: {{document.original_sample_name}}</p>
+    <p ng-if="document.sample_description">{{ 'Sample description' | t }}: {{document.sample_description}}</p>
+    <p ng-if="document.cabinet_no">{{ 'Box/cabinet no' | t }}: {{document.cabinet_no}}</p>
+    <p ng-if="document.thin_section">{{ 'Thin section no' | t }}: {{document.thin_section}}</p>
+    <p ng-if="document.fossil == 'yes' ">{{ 'Fossil' | t }}: {{ 'yes' | t }}</p>
+    <p ng-if="document.fossil == 'no' ">{{ 'Fossil' | t }}: {{ 'no' | t }}</p>
+    <p ng-if="document.analysis">{{ 'Analysis' | t }}: <span ng-repeat="item in document.analysis" class="nowrap">{{ item }} &nbsp;&nbsp;</span> </p>
+  </md-list>
+</section>
 
-    <p ng-if="document.thin_section">
-          Sample description: {{document.sample_description}}</p>
-    <p ng-if="document.collected_year">
-          Collected year: {{document.collected_year}} [{{document.expedition}}]</p>
-    <p ng-if="document.thin_section">Thin section number: {{document.thin_section}}</p>
-      <p ng-if="document.analysis">Analysis:
-      <span ng-repeat="item in document.analysis" class="nowrap">
-            {{ item }} &nbsp;&nbsp;
-     </span> </p>
-     <p ng-if="document.sample_comment">
-          Comment: {{document.sample_comment}}</p>
-  </section>
-
- <!--  <section>
-  <div ng-if="document.files.length > 0">
-    <h3>{{ 'Pictures' | t }}</h3>
-    <md-divider></md-divider>
-    <md-list>
-      <md-list-item class="md-2-line" ng-repeat="file in document.files">
-        <div class="md-list-item-text">
-          <a ng-href="{{file.uri}}"><img src="{{file.uri}}" alt="{{ file.filename }}" style="width:152px;height:114px;"></a>
-        </div>
-      </md-list-item>
-    </md-list>
-  </div>
-  </section> -->
-
-
-<section ng-if="document.last_name && document.last_name.length > 0">
-  <h3>{{ 'Person' | t }}</h3>
+<section>
+ <h3>{{ 'Setting' | t }}</h3>
  <md-divider></md-divider>
   <md-list>
-      <p> <md-icon class="md-avatar-icon">person</md-icon>
-          {{ document.first_name }} {{ document.last_name }}, {{ document.organisation }} </p>
+  <p ng-if="document['@placename'] || document['latitude']" >
+     <md-icon>place</md-icon>{{document['@placename']}} &nbsp; [{{document.latitude}}, {{document.longitude}}]</p>
+    <p ng-if="document.position_accuracy == 'GPS'">{{ 'Position type' | t }}: {{document.position_accuracy}}</p>
+    <p ng-if="document.position_accuracy == 'good estimate' ">{{ 'Position type' | t }}: {{ 'good estimate' | t }}</p>
+    <p ng-if="document.position_accuracy == 'poorly known (set to placename)' ">{{ 'Position type' | t }}: {{ 'poorly known (set to placename)' | t }}</p>
+     <p ng-if="document.collected_year">{{ 'Year sample was collected' | t }}: {{document.collected_year}}</p>
+      <p ng-if="document.expedition">{{ 'Expedition' | t }}: {{document.expedition}}</p>
+     <p ng-if="document.sample_comment"> {{ 'Sample comment' | t }}: {{document.sample_comment}}</p>
+</md-list>
+</section>
+
+
+<section ng-if="document.geologist">
+  <h3>{{ 'Geologist' | t }}</h3>
+ <md-divider></md-divider>
+  <md-list>
+      <p> <md-icon class="md-avatar-icon">person</md-icon>{{ document.geologist }} </p>
     </md-list>
 </section>
 
@@ -71,7 +60,6 @@
     </md-list>
   </div>
   </section>
-
 
 
       <section ng-if="alternate">
