--- a/src/show/show-geology-sample.html
+++ b/src/show/show-geology-sample.html
@@ -16,7 +16,6 @@
     <p ng-if="document.cabinet_no">{{ 'Box/cabinet no' | t }}: {{document.cabinet_no}}</p>
     <p ng-if="document.thin_section">{{ 'Thin section no' | t }}: {{document.thin_section}}</p>
     <p ng-if="document.fossil == 'yes' ">{{ 'Fossil' | t }}: {{ 'yes' | t }}</p>
-    <p ng-if="document.fossil == 'no' ">{{ 'Fossil' | t }}: {{ 'no' | t }}</p>
     <p ng-if="document.analysis">{{ 'Analysis' | t }}: <span ng-repeat="item in document.analysis" class="nowrap">{{ item }} &nbsp;&nbsp;</span> </p>
   </md-list>
 </section>
@@ -26,11 +25,11 @@
  <md-divider></md-divider>
   <md-list>
   <p ng-if="document['@placename'] || document['latitude']" >
-     <md-icon>place</md-icon>{{document['@placename']}} &nbsp; [{{document.latitude}}, {{document.longitude}}]</p>
+     <md-icon>place</md-icon>{{document['@placename']}} &nbsp; [{{document.latitude}}(N), {{document.longitude}}({{'E' | t}})]</p>
     <p ng-if="document.position_accuracy == 'GPS'">{{ 'Position type' | t }}: {{document.position_accuracy}}</p>
     <p ng-if="document.position_accuracy == 'good estimate' ">{{ 'Position type' | t }}: {{ 'good estimate' | t }}</p>
     <p ng-if="document.position_accuracy == 'poorly known (set to placename)' ">{{ 'Position type' | t }}: {{ 'poorly known (set to placename)' | t }}</p>
-     <p ng-if="document.collected_year">{{ 'Year sample was collected' | t }}: {{document.collected_year}}</p>
+     <p ng-if="document.collected_year">{{ 'Year' | t }}: {{document.collected_year}}</p>
       <p ng-if="document.expedition">{{ 'Expedition' | t }}: {{document.expedition}}</p>
      <p ng-if="document.sample_comment"> {{ 'Sample comment' | t }}: {{document.sample_comment}}</p>
 </md-list>
