--- a/src/search/search.html
+++ b/src/search/search.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
 <npdc:search-input feed="feed"></npdc:search-input>
 
-<!---
+<!DOCTYPE html>
+<div ng-if="security.isAuthorized('create', base_user)">
+<md-content layout-padding ng-if="true">
+  <span ng-if="feed.opensearch.totalResults > 0">
+    {{feed.opensearch.totalResults}} results, displaying {{ feed.entries.length}}
+  </span>
+  <span ng-if="showNext()" ><a ng-href="#" ng-click="next()">More</a></span>
+  <span ng-if="feed.opensearch.totalResults == 0">{{ 'search.no_results' | t}} "{{q()}}"<span ng-if="ctrl.hasFilters()">, try <a ng-click="ctrl.removeFilters()">removing all filters</a></span></span>
+<!--  <span ng-show="feed.opensearch.totalResults > 0">@todo FIXME infinite loop[sort by:
+    <a ng-repeat="s in ctrl.sortList" ng-href="{{ctrl.sortHref(s.sort)}}">{{ s.name }} </a>]
+  </span>-->
+</md-content>
+</div>
+
+
+<npdc:contributions facets="feed.facets"></npdc:contributions>
+<!-- <npdc:create-button class="np-primary-control"></npdc:create-button> -->
+
+
+
+<div class="npdc-search">
+  <md-content>
+
+   <!---
 <div class="np-primary-control">
 <md-button  class="md-fab" ng-if="security.isAuthorized('create', resource.path)" ng-href="{{ resource.newHref() }}">
   <md-tooltip md-direction="top">New</md-tooltip>
@@ -9,10 +32,6 @@
 </md-button>
 </div>
 -->
-
-
-<div class="npdc-search">
-  <md-content>
 
     <section>
       <npdc:loader ng-if="!feed.entries"></npdc:loader>
@@ -33,23 +52,11 @@
 
         </md-list>
         <md-divider></md-divider>
-         </div>
-          <div layout-padding>
-        <div ng-if="feed.opensearch.totalResults > 0" layout layout-align="space-between center">
-          <div style="line-height: 48px;">{{feed.opensearch.totalResults}}
-            results, displaying
-            {{ feed.entries.length}}</div>
-          <div>
-            <md-button class="md-raised md-primary" ng-if="showNext()" ng-click="next()">More ...</md-button>
-          </div>
-        </div>
-        <div ng-if="feed.opensearch.totalResults == 0">{{ 'search.no_results' | t}} "{{q()}}"</div>
-      </div>
-
-      </div>
+       </div>
+     </div>
 
 <!-- added ned link -->
-        <div ng-if="!security.isAuthorized('create', base_user)">
+<div ng-if="!security.isAuthorized('create', base_user)">
 <div class="np-layout-list">
         <md-list>
 
@@ -59,7 +66,6 @@
 
             <div class="md-list-item-text">
               <h3 class="md-headline">
-             <!--   <span md-highlight-text="q()" md-highlight-flags="ig">{{e.title}}</span> -->
              <h3 ng-if="e.title"> {{ e.lithology | t }}<em ng-if="e.title">「{{ e.title | t }}」</em></h3>
               <h4 ng-if="e['@placename']">{{ e['@placename'] | t }}, {{ (e.collected_year).substring(0,10) }}</h4>
             </div>
@@ -73,8 +79,6 @@
 
     </section>
   </md-content>
-</div>
-
 </div>
 
 
