--- a/src/show/show-geology-sample.html
+++ b/src/show/show-geology-sample.html
@@ -35,6 +35,15 @@
 </md-list>
 </section>
 
+ <section>
+        <h3>{{ 'Photos' | t }}</h3>
+          <md-divider></md-divider>
+          <div ng-repeat="file in document.files">
+      <!--     <p><md-icon>file_download</md-icon> <a ng-href="{{file.uri+'?key='+key()}}">{{ file.filename}}</a>&nbsp; ({{ file.type }} {{ file.file_size | bytes }})</p>    -->
+          <p><md-icon>file_download</md-icon> <a ng-href="{{file.items.uri+'?key='+ key}}">{{ file.items.filename}}</a>&nbsp; ({{ file.items.type }} {{ file.items.file_size | bytes }})</p>
+          </div>
+          <br />
+</section>
 
 <section ng-if="document.geologist">
   <h3>{{ 'Geologist' | t }}</h3>
