--- a/src/show/show-geology-sample.html
+++ b/src/show/show-geology-sample.html
@@ -39,8 +39,8 @@
         <h3>{{ 'Photos' | t }}</h3>
           <md-divider></md-divider>
           <div ng-repeat="file in document.files">
-      <!--     <p><md-icon>file_download</md-icon> <a ng-href="{{file.uri+'?key='+key()}}">{{ file.filename}}</a>&nbsp; ({{ file.type }} {{ file.file_size | bytes }})</p>    -->
-          <p><md-icon>file_download</md-icon> <a ng-href="{{file.items.uri+'?key='+ key}}">{{ file.items.filename}}</a>&nbsp; ({{ file.items.type }} {{ file.items.file_size | bytes }})</p>
+         <p><md-icon>file_download</md-icon> <a ng-href="{{file.uri+'?key='+key()}}">{{ file.filename}}</a>&nbsp; ({{ file.type }} {{ file.file_size | bytes }})</p>
+     <!--     <p><md-icon>file_download</md-icon> <a ng-href="{{file.uri+'?key='+ key}}">{{ filefilename}}</a>&nbsp; ({{ file.items.type }} {{ file.items.file_size | bytes }})</p>  -->
           </div>
           <br />
 </section>
