--- a/src/search/search.html
+++ b/src/search/search.html
@@ -7,10 +7,10 @@
   <span ng-if="feed.opensearch.totalResults > 0">
     {{feed.opensearch.totalResults}} results, displaying {{ feed.entries.length}}
   </span>
- <!-- <span ng-if="showNext()" ><a ng-href="#" ng-click="next()">More</a></span>
-  <span ng-if="feed.opensearch.totalResults == 0">{{ 'search.no_results' | t}} "{{q()}}"<span ng-if="ctrl.hasFilters()">, try <a ng-click="ctrl.removeFilters()">removing all filters</a></span></span> -->
+  <span ng-if="showNext()" ><a ng-href="#" ng-click="next()">More</a></span>
+  <span ng-if="feed.opensearch.totalResults == 0">{{ 'search.no_results' | t}} "{{q()}}"<span ng-if="ctrl.hasFilters()">, try <a ng-click="ctrl.removeFilters()">removing all filters</a></span></span>
+
 </md-content>
-<!-- </div>  -->
 
 
 <npdc:contributions facets="feed.facets"></npdc:contributions>
@@ -20,7 +20,7 @@
 
     <section>
       <npdc:loader ng-if="!feed.entries"></npdc:loader>
-  <div ng-if="security.isAuthorized('create', base_user)">
+   <div ng-if="security.isAuthorized('create', base_user)">
        <div class="np-layout-list">
         <md-list>
           <md-list-item class="md-2-line" ng-repeat="e in feed.entries" ng-href="sample/{{ e.id }}">
@@ -36,7 +36,7 @@
         </md-list>
         <md-divider></md-divider>
        </div>
-     </div>
+   </div>
 
 <!-- added ned link -->
 <div ng-if="!security.isAuthorized('create', base_user)">
@@ -63,6 +63,7 @@
     </section>
   </md-content>
 </div>
+<!--<npdc:search feed="feed"></npdc:search>  -->
 
 
 
