--- a/src/search/search.html
+++ b/src/search/search.html
@@ -36,6 +36,7 @@
         </md-list>
         <md-divider></md-divider>
        </div>
+        <md-button class="md-raised md-primary" ng-if="showNext()" ng-click="next()">More</md-button>
    </div>
 
 <!-- added ned link -->
@@ -56,6 +57,7 @@
         </md-list>
         <md-divider></md-divider>
       </div>
+       <md-button class="md-raised md-primary" ng-if="showNext()" ng-click="next()">More</md-button>
       </div>
 
 
